--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,10 @@ project(':Server') {
 
         compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.25.1'
         compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.25.1'
+
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.8'
 
         compileOnly 'org.projectlombok:lombok:1.18.8'
         annotationProcessor 'org.projectlombok:lombok:1.18.8'
