--- a/Server/src/main/resources/server-config.properties
+++ b/Server/src/main/resources/server-config.properties
@@ -3,3 +3,4 @@ server.port=8888
 server.threadsNumber=3
 apiKey=8d98256d
 apiUrl=http://www.omdbapi.com/?apikey=8d98256d
+source.dir=C:\\Users\\Home\\Documents\\fmi_cc\\omdb_data
